# cpup

./: .gitmodules  CMakeLists.txt  run.sh
assets/shaders/: logo.fs  logo.vs  sprite.fs  sprite.vs  text.vs
assets/textures/: canis_engine_icon.tga  container.tga
src/: main.c
src/cpup/: arena.c  canis.c  canis.h  ecs.h  io.c  io.h  math.c  math.h  model.c  model.h  opengl.h  shader.c  shader.h  sprite_renderer.c  sprite_renderer.h  text_renderer.c  text_renderer.h  types.h  vec.c  vec.h  window.c  window.h
